Fix EM with PME on GPU
All energy minimizers would exit with an assertion failure about
pinned memory when running PME on a GPU, which is the default choice.
Now memory is properly pinned.

Fixes #2578

Change-Id: I96096fc98b06719248c5528e983bc6673af78215

--- a/docs/release-notes/2018/2018.3.rst
+++ b/docs/release-notes/2018/2018.3.rst
@@ -12,6 +12,14 @@ Multi-domain Conjugate Gradient minimimization no longer segfaults.
 
 :issue:`2554`
 
+Energy minimization now works with PME on a GPU
+""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+
+Energy minimization with PME on a GPU would stop with an assertion failure:
+Source buffer was not pinned for CUDA".
+
+:issue:`2578`
+
 Fixes for ``gmx`` tools
 ^^^^^^^^^^^^^^^^^^^^^^^
 
