Fixed mdrun segv with QM/MM ONIOM scheme
Fixes #2617

Change-Id: I097d392ea53aeff589042df5074866e07a0ce5c5

--- a/docs/release-notes/2018/2018.3.rst
+++ b/docs/release-notes/2018/2018.3.rst
@@ -42,6 +42,11 @@ When this is not the case, grompp will issue a warning.
 
 :issue:`2397`
 
+Fixed segmentation fault in mdrun with QM/MM ONIOM scheme
+""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+
+:issue:`2617`
+
 Fixes for ``gmx`` tools
 ^^^^^^^^^^^^^^^^^^^^^^^
 
