Permit PME on GPUs only for dynamical integrators
We did not intend to support anything else (and at least energy
minimization does not work, because copying of HostVector does not
work properly).

Fixes #2578

Change-Id: I260e578b718614e868ea264a1f487b903704f94f

--- a/docs/release-notes/2018/2018.3.rst
+++ b/docs/release-notes/2018/2018.3.rst
@@ -61,6 +61,14 @@ Fixed segmentation fault in mdrun with QM/MM ONIOM scheme
 
 :issue:`2617`
 
+Correctly specified that PME on GPUs is only supported for dynamical integrators
+""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+
+Previously PME on GPU support could run (but fail) for energy
+minimization and normal-mode analysis runs.
+
+:issue:`2578`
+
 Fixes for ``gmx`` tools
 ^^^^^^^^^^^^^^^^^^^^^^^
 
