Fixed bug reporting initial DLB state
The issue was a size/mapping mismatch between the enum representing
DLB states and the array with the corresponding state string

fixes #2631

Change-Id: I0be35d020d91c30c9770e83e8f57560b75a71b1a

--- a/docs/release-notes/2018/2018.4.rst
+++ b/docs/release-notes/2018/2018.4.rst
@@ -17,3 +17,8 @@ Fixes to improve portability
 
 Miscellaneous
 ^^^^^^^^^^^^^
+
+Fixed an issue where the log file could sometimes report an incorrect
+initial dynamic load balancing state
+
+:issue:`2631`
