Fix PME forces with FE without perturbed q/LJ
PME would incorrectly scale the mesh forces with lambda when no
charges or LJ atom types were actually perturbed.

Fixes #2640

Change-Id: I193d55cf76d842f5b04d3a220411282c06b08a90

--- a/docs/release-notes/2018/2018.4.rst
+++ b/docs/release-notes/2018/2018.4.rst
@@ -9,6 +9,17 @@ earlier, which you can find described in the :ref:`release-notes`.
 Fixes where mdrun could behave incorrectly
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
+Correct PME forces with free energy without perturbed charges/LJ
+""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+
+With free-energies calculations with lambda not set to zero and no
+actual perturbed charges or atom types for Lennard-Jones, the Coulomb
+or LJ PME mesh forces would be scaled with lambda. Note that this bug
+did not affect the, usual, setup where charges or atom types are actually
+perturbed.
+
+:issue: `2640`
+
 Fixes for ``gmx`` tools
 ^^^^^^^^^^^^^^^^^^^^^^^
 
